# ska-sdp-func-python

./: .gitignore  .gitlab-ci.yml  .release  2023_02_22_DEMO.ipynb  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  skairt.toml
docs/: requirements.txt
docs/src/: Fourier_processing.rst  RASCIL_Fourier_processing.rst  RASCIL_api.rst  RASCIL_data.rst  RASCIL_functions.rst  RASCIL_polarisation_handling.rst  RASCIL_structure.rst  api.rst  conf.py  fourier_processing.rst  functions.rst  index.rst  ionospheric_calibration.rst  usage.rst
src/: __init__.py
src/ska_sdp_func_python/: __init__.py
tests/: conftest.py  testing_utils.py
tests/apps/: test_imaging_qa_main_functions.py  test_rascil_advise.py  test_rascil_rcal.py
tests/apps_rsexecute/: test_imaging_qa_main.py  test_rascil_imager.py  test_rascil_imager_functions.py
tests/calibration/: test_beamformer_utils.py  test_calibration_solvers.py  test_chain_calibration.py  test_dp3_calibration.py  test_ionosphere_solvers.py  test_ionosphere_utils.py  test_jones.py  test_operations.py
tests/fourier_transforms/: test_fft_coordinates.py  test_fft_support.py
tests/grid_data/: test_griddata_gridding.py
tests/griddata/: test_griddata_gridding.py
tests/image/: test_image_deconvolution.py  test_image_deconvolution_msmfs.py  test_image_gather_scatter.py  test_image_iterators.py  test_image_taylor_terms.py  test_msclean.py  test_operations.py
tests/imaging/: conftest.py  test_base.py  test_dft_skycomponent_visibility.py  test_dft_skycomponent_visibility_kernels.py  test_imaging.py  test_imaging_helpers.py  test_imaging_ng.py  test_imaging_wg.py  test_weighting.py
tests/testing_data/: README.md  (+1 more)
(+167 files in other folders)
