[tool.poetry]
name = "ska-sdp-func-python"
version = "0.1.5"
description = "SKA SDP Python-Based Processing Functions"
authors = ["SKA SDP Developers"]
license = "Apache 2.0"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func-python"
documentation = "https://developer.skao.int/projects/ska-telescope-ska-sdp-func-python/en/latest/"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.poetry.source]]
name = "ska-sdp-datamodels"
url = "https://gitlab.com/api/v4/projects/40032008/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
astroplan = "^0.8"
astropy = "^5.1"
ducc0 = "^0.27.0"
# numpy version set to be compatible with RASCIL
numpy = "^1.23, <1.24"
photutils = "^1.5.0"
scipy = "^1.9.3"
ska-sdp-datamodels = {version = "0.1.3+dev.c6f36dcd3", source = "ska-sdp-datamodels"}
ska-sdp-func = { git = "https://gitlab.com/ska-telescope/sdp/ska-sdp-func.git", branch = "main"}
xarray = "^2022.11.0"

# optional dependencies; used by "extras"
cupy = {version = "^11.3.0", optional = true}
pyfftw = {version = "^0.13.0", optional = true}
radler = {version = "^0.0.1", optional = true}
dp3 = {version = "^5.4.0", optional = true}

[tool.poetry.extras]
fft_support = ["pyfftw"]
gpu = ["cupy"]
radler = ["radler"]
dp3 = ["dp3"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
build = "^0.7.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pylint-junit = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
